Fix last serie section padding on mobile

--- a/site/assets/scss/bases/_layout.scss
+++ b/site/assets/scss/bases/_layout.scss
@@ -130,7 +130,9 @@ a {
 }
 
 [data-module-serie="main"] .o-section:last-child {
-    padding-right: 35vw;
+    @include media( '>medium' ) {
+        padding-right: 35vw;
+    }
 }
 
 #app,
